<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Título da Janela. -->
    <TextView
        android:id="@+id/Titulo_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/Titulo_Login"
        android:textColor="@color/purple7930E4"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo Email. -->

    <TextView
        android:id="@+id/campo_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Campo_Email_Cadastro"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/edit_email_login"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:hint="@string/hint_edit_email_cadastro"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_email_login" />

    <!-- Campo Senha. -->
    <TextView
        android:id="@+id/campo_senha_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/Campo_Senha_Cadastro"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_login" />

    <EditText
        android:id="@+id/edit_senha_login"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="12dp"
        android:hint="@string/hint_edit_senha_cadastro"
        android:autofillHints="password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo_senha_login" />


    <!-- Text: Esqueceu a senha. -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"
        android:text="@string/esqueci_minha_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha_login" />


    <!-- Botão Entrar. -->
    <Button
        android:id="@+id/Entrar"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:color="@color/purple7930E4"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha_login" />

    <!-- Botão Cancelar. -->
    <Button
        android:id="@+id/Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:color="@color/purple7930E4"
        android:text="@string/button_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Entrar" />

</androidx.constraintlayout.widget.ConstraintLayout>